mark wrap fix

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -29,6 +29,7 @@ html {
 mark {
     color: var(--wa-color-purple-20);
     background-color: var(--wa-color-purple-90);
+    white-space: nowrap;
 }
 
 input {
